# evaluating-epilink

./: .gitattributes  .gitignore  README.md  environment.yml  preparation.md  pyproject.toml
.snakemake/metadata/: ZGF0YS9wcm9jZXNzZWQvc3ludGhldGljL3NjZW5hcmlvPWFkdmVyc2FyaWFsL3BhaXJ3aXNlLnBhcnF1ZXQ=  ZGF0YS9wcm9jZXNzZWQvc3ludGhldGljL3NjZW5hcmlvPWFkdmVyc2FyaWFsL3BhaXJ3aXNlX3Njb3JlZC5wYXJxdWV0  ZGF0YS9wcm9jZXNzZWQvc3ludGhldGljL3NjZW5hcmlvPWJhc2VsaW5lL3BhaXJ3aXNlLnBhcnF1ZXQ=  (+37 more)
config/: boston.yaml  cluster_stability.yaml  clustering.yaml  default_parameters.yaml  generate_datasets.yaml  paths.yaml  scovmod.yaml  temporal_stability.yaml
configs/: base.yaml  scovmod.yaml
configs/studies/: boston.yaml  (+4 more)
data/: README.md
notebooks/: README.md  cluster_stability.ipynb  figures.ipynb  main_results.ipynb  ploscb_figures.ipynb  testing.ipynb
scripts/: 04.1_sparsify_effects.py  04.2_run_clustering.py  05_evaluate_clustering.py  06_boston_pipeline.py  _bootstrap.py  boston_clustering.py  boston_pipeline.py  characterise_epilink.py  characterise_epilink_plot.py  cluster_stability.py  evaluate_clustering.py  generate_datasets.py  generate_tree.py  generate_tree_plot.py  main_plots.py  main_results.ipynb  pairwise_discrimination.py  plot_characterise_epilink.py  render_figures.py  report_runs.py  run_all.sh  run_clustering.py  sparsify_effects.py  transmission_heterogeneity.py  utils.py
tests/: test_boston.py  test_characterisation.py  test_config.py  test_epilink_adapter.py  test_execution.py  test_graphs.py  test_pairwise_benchmark.py  test_reporting.py
workflow/: Snakefile
(+192 files in other folders)
